Ajout des hover sur les maisons et les perso

--- a/index.html
+++ b/index.html
@@ -35,35 +35,35 @@
     <section>
         <h3>Characters</h3>
         <div class="characters">
-            <div class="character">
+            <div class="character G">
                 <img src="./images/characters/harry.webp" alt="" srcset=""/>
                 <p>Harry <br> Potter</p>
             </div>
-            <div class="character">
+            <div class="character G">
                 <img src="./images/characters/hermione.webp" alt="" srcset=""/>
                 <p>Hermione <br> Grange</p>
             </div>
-            <div class="character">
+            <div class="character G">
                 <img src="./images/characters/ron.webp" alt="" srcset=""/>
                 <p>Ron <br> Weasley</p>
             </div>
-            <div class="character">
+            <div class="character S">
                 <img src="./images/characters/draco.webp" alt="" srcset=""/>
                 <p>Draco <br> Malfoy</p>
             </div>
-            <div class="character">
+            <div class="character H">
                 <img src="./images/characters/cho.webp" alt="" srcset=""/>
                 <p>Cho <br> Chang</p>
             </div>
-            <div class="character">
+            <div class="character S">
                 <img src="./images/characters/snape.webp" alt="" srcset=""/>
                 <p>Severus <br> Snape</p>
             </div>
-            <div class="character">
+            <div class="character R">
                 <img src="./images/characters/mcgonagall.webp" alt="" srcset=""/>
                 <p>Minerva <br> Mcgonagall</p>
             </div>
-            <div class="character">
+            <div class="character H">
                 <img src="./images/characters/cedric.webp" alt="" srcset=""/>
                 <p>Cedric <br> Diggory</p>
             </div>
