--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section>
         <h3>HOUSES</h3>
         <div class="houses">
-            <img src="./images/logo/Gryffindor.png" alt="" srcset=""/>
+            <img src="./images/logo/Gryffindor.png" alt="" srcset="" />
             <img src="./images/logo/Hufflepuff.png" alt="" srcset=""/>
             <img src="./images/logo/Ravenclaw.png" alt="" srcset=""/>
             <img src="./images/logo/Slytherin.png" alt="" srcset=""/>
@@ -36,7 +36,9 @@
         <h3>Characters</h3>
         <div class="characters">
             <div class="character G">
+                <a href="details.html">
                 <img src="./images/characters/harry.webp" alt="" srcset=""/>
+                </a>
                 <p>Harry <br> Potter</p>
             </div>
             <div class="character G">
